examples/compute/cluster/v1beta1/vpntunnel.yaml

apiVersion: compute.gcp.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: compute/v1beta1/vpntunnel
    upjet.upbound.io/manual-intervention: "Dependant reference types not currently supported" 
  labels:
    testing.upbound.io/example-name: vpn-tunnel
  name: vpn-tunnel
spec:
  forProvider:
    destRange: 15.0.0.0/24
    networkSelector:
      matchLabels:
        testing.upbound.io/example-name: vpn-tunnel
    nextHopVpnTunnelSelector:
      matchLabels:
        testing.upbound.io/example-name: vpn-tunnel
    priority: 1000
